# marker-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  build_venv.sh  docker-compose.yml  environment.yml  pyproject.toml  start_mcp.sh
examples/: convert_pdf.py
examples/mcp/: README.md  claude_desktop_config.json
marker_mcp/: __init__.py  conversion_service.py  mcp_server.py  ollama_service.py
tests/: conftest.py  test_build_options.py  test_conversion_service.py  test_examples.py  test_integration.py  test_llm_options.py  test_mcp_tools.py  test_ollama_cloud_integration.py  test_ollama_service.py
